--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -4,7 +4,6 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem 5%;
-    background: rgba(0, 0, 0, 0.9);
     position: fixed;
     width: 100%;
     top: 0;
@@ -13,20 +12,24 @@
   
   .logo {
     color: #fff;
-    font-size: 1.8rem;
+    font-size: 2rem;
     margin: 0;
   }
   
   .links {
     display: flex;
-    gap: 2rem;
+    gap: 10rem;
   }
   
   .links a {
     color: #fff;
+    width: 10rem;
     text-decoration: none;
-    font-weight: 500;
+    font-size: 1.5rem;
+    font-weight: 700;
     transition: color 0.3s;
+    text-align: center;
+    border-top: 5px solid white;
   }
   
   .links a:hover {
@@ -34,6 +37,6 @@
   }
   
   .active {
-    color: #44d62c !important;
-    border-bottom: 2px solid #44d62c;
+    /* color: #44d62c !important; */
+    
   }
