--- a/src/components/MainContent/MainContent.module.css
+++ b/src/components/MainContent/MainContent.module.css
@@ -1,15 +1,32 @@
 /* components/MainContent/MainContent.module.css */
+/* @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap'); */
+
 .container {
     text-align: left;
     padding: 8rem 2rem 4rem;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-
     justify-content: center;
-    background: linear-gradient(135deg, #1a1a1a 0%, #000000 100%);
+    background-image: url('../../assets/N74.jpg');
+    background-size: cover;
+    background-position: center;
     color: white;
+    position: relative;
+    z-index: 1;
   }
+
+.container::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: -1;
+}
   
   .subtitle {
     font-size: 1.5rem;
@@ -18,9 +35,10 @@
   }
   
   .title {
-    font-size: 3rem;
+    font-size: 4.5rem;
     margin-bottom: 3rem;
     line-height: 1.2;
+    font-family: 'Orbitron', sans-serif;
   }
   
   .buttonGroup {
