--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 5%;
+    padding: 2% 5%;
     position: fixed;
     width: 100%;
     top: 0;
@@ -12,8 +12,10 @@
   
   .logo {
     color: #fff;
-    font-size: 2rem;
+    font-size: 3.5rem;
+    font-weight: 500;
     margin: 0;
+    font-family: 'Wallpoet', sans-serif;
   }
   
   .links {
@@ -26,10 +28,11 @@
     width: 10rem;
     text-decoration: none;
     font-size: 1.5rem;
-    font-weight: 700;
+    font-weight: lighter;
     transition: color 0.3s;
     text-align: center;
     border-top: 5px solid white;
+    font-family: 'Orbitron', sans-serif;
   }
   
   .links a:hover {
