feat: 파일 업데이트 화면 구현 ✨

--- a/src/components/FooterContent/FooterContent.module.css
+++ b/src/components/FooterContent/FooterContent.module.css
@@ -18,7 +18,7 @@
     font-size: 1.5rem;
     color: white; /* 라벨 색상 */
     margin-bottom: 3%; /* 라벨 아래 여백 */
-    font-family: 'Wallpoet', sans-serif; /* Wallpoet 폰트 적용 예시 */
+    font-family: 'Orbitron', sans-serif; /* Wallpoet 폰트 적용 예시 */
   }
   
   .barTrack {
