--- a/src/components/MonitoringConent/UpdateMonitoringContent.module.css
+++ b/src/components/MonitoringConent/UpdateMonitoringContent.module.css
@@ -102,3 +102,16 @@
   color: #fff;
   font-size: 1.5rem;
 }
+
+.loading {
+  text-align: center;
+  font-size: 1.5rem;
+  padding: 20px;
+}
+
+.error {
+  text-align: center;
+  font-size: 1.2rem;
+  color: #ff5555;
+  padding: 20px;
+}
