--- a/src/components/MonitoringConent/UpdateMonitoringContent.module.css
+++ b/src/components/MonitoringConent/UpdateMonitoringContent.module.css
@@ -31,8 +31,15 @@
   overflow-wrap: break-word;
   padding: 0 5px;
   box-sizing: border-box;
-  width: 200px;
+  width: 200px;                                                 
   line-height: 1.5;
+}
+
+.header span:last-child {
+  flex: 0 0 40px; /* X 버튼 열은 고정 너비 */
+  width: 60px;
+  font-size: medium;
+  margin-right: 20px;
 }
 
 .divider {
@@ -58,9 +65,9 @@
   width: 100%;
   max-width: 1200px;
   box-sizing: border-box;
-  height: 80px; /* 세로 길이 고정 */
+  height: 80px;
   display: flex;
-  align-items: center; /* 아이템 내부 수직 가운데 정렬 */
+  align-items: center;
 }
 
 .itemDetails {
@@ -78,8 +85,36 @@
   overflow-wrap: break-word;
   padding: 0 5px;
   box-sizing: border-box;
-  max-width: 200px;
+  width: 200px;
   line-height: 1.5;
+}
+
+.itemDetails span:last-child {
+  flex: 0 0 1px; /* X 버튼 열은 고정 너비 */
+  width: 50px;
+  display: flex;
+  justify-content: right;
+  align-items: center;
+}
+
+.removeButton {
+  background: transparent;
+  border: 2px solid #fff;
+  color: #fff;
+  font-family: 'Orbitron', sans-serif;
+  font-size: 1rem;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.removeButton:hover {
+  background: rgba(255, 255, 255, 0.1);
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
 }
 
 .pagination {
