--- a/src/components/DeployUpdateContent/DeploymentSummaryContent.module.css
+++ b/src/components/DeployUpdateContent/DeploymentSummaryContent.module.css
@@ -144,10 +144,10 @@
 }
 
 .skipDetails {
-  display: flex;
-  align-items: center;
   margin-top: 20px;
   font-size: 1rem;
+  display: flex;
+  justify-self: center;
   color: white;
 }
 
