style: UX 통일감을 위한 한글 -> 영어 번경

--- a/src/components/FooterContent/CompleteFooterContent.module.css
+++ b/src/components/FooterContent/CompleteFooterContent.module.css
@@ -107,7 +107,9 @@
 .instructionText {
   color: white;
   font-family: 'Orbitron', sans-serif;
+  position: relative;
   top: 45px;
+  right: 20px;
 }
 
 /* .barTrack에 align-items: right; 는 유효하지 않습니다. */
